--- a/src/online_advertising.html
+++ b/src/online_advertising.html
@@ -78,30 +78,28 @@
         <!-- end header -->
 
         <!-- Start of 'Online advertising' Landing -->
-        <section class="relative py-32 px-12 pl-6 lg:py-44 lg:pl-32 bg-gradient-to-br from-blue-500 to-green-400">
-            <div class="h-full absolute top-0 left-0">
+        <section class="relative pt-32 lg:pt-44 bg-gradient-to-br from-blue-500 to-green-400">
+            <div class="h-full absolute top-0 left-0 right-0">
                 <img src="images/advertising.jpg" alt="People socializing."
                     class="w-full h-full object-cover opacity-10">
             </div>
-            <h1 class="text-xs lg:text-base uppercase font-bold mb-3 lg:mb-6 text-blue-50 z-10">Online Advertising</h1>
-            <p class="font-semibold lg:w-1/2 text-3xl lg:text-5xl max-w-prose text-blue-50">A focused strategy is key to
-                achieving success here.</p>
-        </section>
 
-        <!-- Wave decoration-->
-        <div class="-mt-56 lg:-mt-72 xl:-mt-88">
-            <svg class="h-80 w-full transform scale-y-200 lg:scale-y-100 lg:h-full" width="1440" height="295"
+            <div class="px-12 lg:px-24">
+                <h1 class="text-xs lg:text-base uppercase font-bold mb-3 lg:mb-6 text-blue-50 z-10">Online Advertising</h1>
+                <p class="font-semibold lg:w-1/2 text-3xl lg:text-5xl max-w-prose text-blue-50">A focused strategy is key to
+                    achieving success here.</p>
+            </div>
+
+            <svg class="w-full mt-12 md:mt-0 relative"
                 viewBox="0 0 1440 295" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M0 261.859L24 256.464C48 250.299 96 239.509 144 244.904C192 250.299 240 272.649 288 261.859C336 250.299 384 206.368 432 206.368C480 206.368 528 250.299 576 256.464C624 261.859 672 228.718 720 184.017C768 139.316 816 83.824 864 89.9898C912 95.3848 960 161.666 1008 173.227C1056 184.017 1104 139.316 1152 95.3848C1200 50.6833 1248 6.75252 1296 0.586802C1344 -4.8082 1392 28.3325 1416 45.2883L1440 62.244V295H1416C1392 295 1344 295 1296 295C1248 295 1200 295 1152 295C1104 295 1056 295 1008 295C960 295 912 295 864 295C816 295 768 295 720 295C672 295 624 295 576 295C528 295 480 295 432 295C384 295 336 295 288 295C240 295 192 295 144 295C96 295 48 295 24 295H0V261.859Z"
                     fill="white" />
             </svg>
-
-        </div>
-
+        </section>
 
         <!-- Start of online advertising explanation-->
-        <section class="lg:pb-32">
+        <section class="mt-12 pb-24 flex justify-center">
             <article>
                 <!-- Text -->
                 <div class="max-w-prose mx-6 lg:mx-auto text-gray-600">
