--- a/src/pricing.html
+++ b/src/pricing.html
@@ -88,11 +88,11 @@
                         Choose a plan that works best for you and your business.
                     </p>
                 </div>
-                <div class="pt-16 lg:pt-24 flex flex-col lg:flex-row">
+                <div class="pt-16 px-8 lg:px-0 lg:pt-24 flex flex-col lg:flex-row">
 
                     <!-- Basic Card -->
                     <div
-                        class="md:w-96 p-8 bg-white mx-4 lg:mx-0 mb-16 lg:mb-0 text-center rounded-3xl lg:pr-16 shadow-md lg:shadow-lg">
+                        class="w-full lg:w-96 p-8 bg-white mb-16 lg:mb-0 text-center rounded-3xl shadow-md lg:pr-16 lg:shadow-lg">
                         <h1 class="text-black font-semibold text-2xl">Basic</h1>
                         <span class="block italic pt-6 tracking-wide font-medium text-xs uppercase text-gray-400">Starts
                             At</span>
@@ -156,7 +156,7 @@
 
                     <!-- Premium Card -->
                     <div
-                        class="md:w-80 relative p-8 bg-gray-900 mx-4 lg:mx-0 mb-16 lg:mb-0 text-center rounded-3xl text-white md:border-4 shadow-md lg:shadow-lg border-white md:transform md:scale-125">
+                        class="w-full lg:w-80 relative p-8 bg-gray-900 lg:mx-0 mb-16 lg:mb-0 text-center rounded-3xl text-white md:border-4 shadow-md lg:shadow-lg border-white md:transform md:scale-125">
                         <h1 class="text-white font-semibold text-2xl">Premium</h1>
                         <span class="block italic pt-6 tracking-wide font-medium text-xs uppercase text-gray-400">Starts
                             At</span>
@@ -224,7 +224,7 @@
 
                     <!-- Enterprise Card -->
                     <div
-                        class="md:w-96 p-8 bg-white mx-4 lg:mx-0 mb-16 lg:mb-0 text-center rounded-3xl shadow-md lg:pl-16 lg:shadow-lg">
+                        class="w-full lg:w-96 p-8 bg-white mb-16 lg:mb-0 text-center rounded-3xl shadow-md lg:pl-16 lg:shadow-lg">
                         <h1 class="text-black font-semibold text-2xl">Enterprise</h1>
                         <span class="block italic pt-6 tracking-wide font-medium text-gray-400 uppercase text-xs">Starts
                             At</span>
