--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -76,7 +76,7 @@
     <!-- end header -->
 
     <!-- Start of Privacy Policy text-->
-    <section class="pt-24 pb-40 lg:pt-40 lg:pb-32 flex justify-center">
+    <section class="pt-40 pb-40 lg:pb-32 flex justify-center">
       <article class="max-w-screen-xl lg:mx-8">
         <div class="flex flex-col items-center justify-center">
           <div class="inline-block p-3 lg:p-4 rounded-full mb-1 bg-gradient-to-r from-blue-500 to-green-400">
